--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
-# Your timezone, https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-TZ=America/New_York
+TZ=Europe/Paris
 # UNIX PUID and PGID, find with: id $USER
-PUID=1000
-PGID=1000
+PUID=1337
+PGID=1337
 # The directory where data and configuration will be stored.
-ROOT=/media
+ROOT=/data
