add Organizr docker remove useless directories creation install acl apt package in pre-tasks fix permissions in tasks

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -1,6 +1,12 @@
 - name: HTPC-DOWNLOAD-BOX | Home Theatre PC Download Box
   hosts: "{{ host | default('all')}}"
 
+  pre_tasks:
+    - name: install pre-requisites
+      package:
+        state: present
+        name: 
+          - acl
   tasks:
     - name: Include main file
       include: tasks/main.yml
