--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -111,3 +111,17 @@ services:
       - ${ROOT}/config/bazarr:/config # config files
       - ${ROOT}/complete/movies:/movies # movies folder
       - ${ROOT}/complete/tv:/tv # tv shows folder
+
+  organizr:
+    container_name: organizr
+    image: linuxserver/organizr
+    restart: unless-stopped
+    network_mode: host
+    environment:
+      - PUID=${PUID} # default user id, defined in .env
+      - PGID=${PGID} # default group id, defined in .env
+      - TZ=${TZ} # timezone, defined in .env
+      - fpm="false"
+      - branch="v2-master"
+    volumes:
+      - ${ROOT}/config/organizr:/config # config files
